# PismoProtocol

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Procfile  README.md  build_docker.sh  build_nixpacks.sh  deploycontracts.sh  nixpacks.toml  pg_local_clean  railway.toml  run_docker.sh  start_indexer.sh
backend/: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  Makefile  README.md  async_backend.py  backend.py  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  package.json  requirements-dev.txt  requirements.txt  server.py  test_backend.py  test_lp_balance.py  test_vault_values.py
claude-prep-evan/: directory_extractor.py
contracts/: .gitignore  Move.toml  README.md  deployment.json
deployment-manager/: README.md  initialized_deployment.json  package-lock.json  package.json  tsconfig.json
frontend/: .env.example  .gitignore  README.md  config.toml  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
indexer/: .dockerignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  entrypoint.sh
indexer/.cursor/rules/: new_events.yaml
indexer/config/: testnet.toml
indexer/src/: config.rs  lib.rs  main.rs  router.rs  worker.rs
indexer/src/callbacks/: mod.rs  transfers_callbacks.rs
indexer/src/db/: mod.rs
indexer/src/db/models/: close_position_events.rs  collateral_combine_event.rs  collateral_deposit_event.rs  collateral_marker_liquidated_event.rs  collateral_transfer.rs  collateral_withdraw_event.rs  mod.rs  new_account_event.rs  open_position_events.rs  position_liquidated_event.rs  start_collateral_value_assertion_event.rs  vault_created_events.rs  vault_transfer.rs
indexer/src/db/postgres/: mod.rs  schema.rs
indexer/src/db/postgres/migrations/0000011_collateral_combine_event/: down.sql  up.sql
indexer/src/db/postgres/migrations/0000012_collateral_withdraw_event/: down.sql  up.sql
indexer/src/db/postgres/migrations/000001_open_position_events/: down.sql  up.sql
indexer/src/db/postgres/migrations/000002_close_position_events/: down.sql  up.sql
indexer/src/db/postgres/migrations/000003_vault_created_events/: down.sql  up.sql
indexer/src/db/postgres/migrations/000004_collateral_deposit_event/: down.sql  up.sql
indexer/src/db/postgres/migrations/000005_new_account_event/: down.sql  up.sql
indexer/src/db/postgres/migrations/000006_start_collateral_value_assertion_event/: down.sql  up.sql
indexer/src/db/postgres/migrations/000007_create_collateral_transfers/: down.sql  up.sql
indexer/src/db/postgres/migrations/000008_create_vault_transfers/: down.sql  up.sql
indexer/src/db/postgres/migrations/000009_position_liquidated_event/: down.sql  up.sql
indexer/src/db/postgres/migrations/000010_collateral_marker_liquidated_event/: down.sql  up.sql
indexer/src/db/repositories/: close_position_events.rs  collateral_combine_event.rs  collateral_deposit_event.rs  collateral_marker_liquidated_event.rs  collateral_transfer.rs  collateral_withdraw_event.rs  mod.rs  new_account_event.rs  open_position_events.rs  position_liquidated_event.rs  repositories_utils.rs  start_collateral_value_assertion_event.rs  vault_created_events.rs  vault_transfer.rs
indexer/src/events/: collateral_combine_event.rs  collateral_deposit_event.rs  collateral_marker_liquidated.rs  collateral_transfer_created.rs  collateral_withdraw_event.rs  common.rs  mod.rs  new_account_event.rs  position_closed.rs  position_created.rs  position_liquidated.rs  start_collateral_value_assertion_event.rs  vault_created.rs  vault_transfer_created.rs
indexer/src/handlers/: accounts.rs  collateral.rs  liquidations.rs  mod.rs  positions.rs  transfers.rs  vaults.rs
liquidation_transfer_service/: .env.example  DOCKER_README.md  Dockerfile  Dockerfile.debug  Makefile  README.md  (+4 more)
pismo-connect/: Cargo.toml  README.md
pismo-connect/src/: main.rs
(+207 files in other folders)
